<?xml version="1.0" encoding="utf-8"?><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/create_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_account" />

    <ImageView
        android:id="@+id/icon_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_account_title"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_profile" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/icon_profile"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/lastname"
        android:paddingTop="10dp" />


    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/firstname"
        android:layout_marginLeft="30dp"
        android:hint="@string/firstname" />

    <ImageView
        android:id="@+id/ic_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastname"
        android:src="@mipmap/ic_location" />

    <EditText
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lastname"
        android:layout_marginLeft="30dp"
        android:hint="@string/street" />

    <EditText
        android:id="@+id/zip_code"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/street"
        android:layout_marginLeft="30dp"
        android:hint="@string/zip_code"
        android:maxLength="5" />

    <EditText
        android:id="@+id/city"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/street"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/zip_code"
        android:hint="@string/city"
        android:maxLength="30" />

    <ImageView
        android:id="@+id/ic_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zip_code"
        android:paddingLeft="0dp"
        android:layout_marginLeft="-7dp"
        android:src="@mipmap/ic_email" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/zip_code"
        android:layout_marginLeft="30dp"
        android:hint="@string/mail" />

</RelativeLayout>

    <!--
    </ScrollView>-->
