<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/basket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/basket"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/n_products"
                    android:textSize="15sp" />


                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/products"
                    android:orientation="vertical" />


                <!--
                        <ImageView
                            android:id="@+id/details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:visibility="gone"
                            android:padding="0dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:src="@mipmap/ic_details"/>-->
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/econmize_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/total_price"
                    android:text="@string/economize_prize"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="15sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/validate"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/test_offre1_automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_offre1_automatic" />

            <TextView
                android:id="@+id/test_offre2_automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_offre2_automatic" />

            <TextView
                android:id="@+id/test_offre3_automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_offre3_automatic" />

            <TextView
                android:id="@+id/test_offre3_sliceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_offre3_sliceValue" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>