<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="0dp"
    tools:context=".ui.activity.HomeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_books"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <CheckBox
        android:id="@+id/select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/select_all"/>
    <!--
        <CheckBox
            android:id="@+id/clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"

            android:layout_toRightOf="@+id/select_all"
            android:layout_below="@+id/title"

            android:text="@string/clear_all"/>-->
    <View
        android:layout_below="@+id/select_all"
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/loading_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />
    </LinearLayout>



    <ListView
        android:id="@+id/list_books"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:layout_marginRight="-5dp"
        android:layout_below="@+id/select_all"
        android:dividerHeight="5px" />

    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ListView
            android:id="@+id/list_books"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>-->

    <!--
        <Button
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/filter_book"
            android:textSize="20sp" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="0dp">

        <Button
            android:id="@+id/add_book"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="-5dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginRight="-5dp"
            android:text="@string/add_book"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
